# GC-Spammer-Concept

./: .breakpoints  .env  README.md  main.py  pyproject.toml  requirements.txt
Resources/: __init__.py
Resources/Reaper/: __init__.py  add.py  create.py
Resources/Utils/: __init__.py  design.py
